<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".LevelActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="24dp"
        android:background="#6897bb"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toStartOf="@+id/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=" Points: "
            android:textColor="#ffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/points_lev_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:background="#6897bb"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/point"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=" User: "
            android:textColor="#ffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/username_lev_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="*username*"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="3dp"
        android:background="#4888"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point">

        <TextView
            android:id="@+id/dif_textView"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:gravity="center"
            android:text="@string/level"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_beginners"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_level"
            android:text="@string/beginners"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_basis"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_level"
            android:text="@string/basis"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_advanced"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_level"
            android:text="@string/advanced"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">



        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_level"
            android:layout_weight="1"
            android:text="@string/logout" />

        <Button
            android:id="@+id/leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_level"
            android:layout_weight="1"
            android:text="@string/leaderboard" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
