<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".OptionActivity"
    tools:layout_editor_absoluteY="81dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="#6897bb"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/picture_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/point"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text=" User: "
                    android:textColor="#ffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/username_opt_textview"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:text="*username*"
                    android:textColor="#ffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:background="#6897bb"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/user"
                app:layout_constraintEnd_toStartOf="@+id/user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:text=" Points: "
                    android:textColor="#ffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/points_opt_textView"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:text="00"
                    android:textColor="#ffff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/picture_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/vocabulary_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/picture_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview_picture"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/picture_button"
                    app:layout_constraintTop_toBottomOf="@+id/picture_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vocabulary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/vocabulary_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo_vocabulary"
                    app:layout_constraintBottom_toBottomOf="@+id/vocabulary_textView"
                    app:layout_constraintEnd_toStartOf="@+id/picture_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/point" />

                <TextView
                    android:id="@+id/vocabulary_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview_vocabulary"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/word_button"
                    app:layout_constraintEnd_toEndOf="@+id/vocabulary_button" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/Assembling"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Assembling_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo_assembling"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/Translate_button"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/assembling_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/assembling_word"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/translate_textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Assembling_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/word_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo_words"
                    app:layout_constraintBottom_toTopOf="@+id/grammar_textView"
                    app:layout_constraintEnd_toStartOf="@+id/grammar_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/grammar_button"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/word_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview_word"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/word_button"
                    app:layout_constraintTop_toBottomOf="@+id/word_button" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/grammar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/grammar_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/logo_grammar"
                    app:layout_constraintBottom_toBottomOf="@+id/grammar_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/word_button"
                    app:layout_constraintTop_toBottomOf="@+id/picture_textView" />

                <TextView
                    android:id="@+id/grammar_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview_grammar"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/Translate_button"
                    app:layout_constraintEnd_toEndOf="@+id/grammar_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/translate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Translate_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/listening_comprehension70"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Assembling_button" />


                <TextView
                    android:id="@+id/translate_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text="@string/translate_word"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/assembling_textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/assembling_textView"
                    app:layout_constraintTop_toBottomOf="@+id/Translate_button" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
